implement api auth with jwt
