# app/routes.php
@@ -4,11 +4,12 @@ declare(strict_types=1);
 
 // use App\Application\Actions\User\ListUsersAction;
 // use App\Application\Actions\User\ViewUserAction;
+use App\Application\Actions\Auth\LoginAction;
 use App\Application\Actions\Docs\SwaggerJsonAction;
 use Psr\Http\Message\ResponseInterface as Response;
 use Psr\Http\Message\ServerRequestInterface as Request;
 use Slim\App;
-// use Slim\Interfaces\RouteCollectorProxyInterface as Group;
+use Slim\Interfaces\RouteCollectorProxyInterface as Group;
 
 return function (App $app) {
     // swagger doc
@@ -20,17 +21,9 @@ return function (App $app) {
         return $response;
     });
 
-    /*$app->get('/', function (Request $request, Response $response) {
-        $response->getBody()->write('Hello world');
-        return $response;
-    });*/
-
-    /*
-    $app->group('/users', function (Group $group) {
-        $group->get('', ListUsersAction::class);
-        $group->get('/{id}', ViewUserAction::class);
+    $app->group('/auth', function (Group $group) {
+        $group->post('/login', LoginAction::class);
     });
-    */
 
     // website routes
     (require __DIR__ . '/routes/site.php')($app);
