# app/routes/site.php
@@ -6,6 +6,7 @@ use App\Application\Actions\Site\ListDictionaryTermsAction;
 use App\Application\Actions\Site\ShowDictionaryTermAction;
 use App\Application\Actions\Site\PostAction;
 use App\Application\Actions\Site\MonumentAction;
+use App\Application\Middleware\AuthMiddleware;
 use Psr\Http\Message\ResponseInterface as Response;
 use Psr\Http\Message\ServerRequestInterface as Request;
 use Slim\Interfaces\RouteCollectorProxyInterface as Group;
@@ -13,32 +14,42 @@ use Slim\Interfaces\RouteCollectorProxyInterface as Group;
 
 return function (App $app) {
 
-    $app->group('/site', function (Group $group) {
+    $app->group('/site', function (Group $site) {
 
+        /*$app->group('/auth', function (RouteCollectorProxy $group) {
+            $group->post('/login', AuthLoginAction::class);
+        });*/
+        
         // dictionary routes
-        $group->get('/dictionary', ListDictionaryTermsAction::class);
-        $group->get('/dictionary/{slug}', ShowDictionaryTermAction::class);
+        //$site->get('/dictionary', ListDictionaryTermsAction::class);
+        //$site->get('/dictionary/{slug}', ShowDictionaryTermAction::class);
 
-        $group->get('/posts', function (Request $request, Response $response) {
+        $site->group('/dictionary', function (Group $dictionary) {
+            $dictionary->get('', ListDictionaryTermsAction::class);
+            $dictionary->get('/{slug}', ShowDictionaryTermAction::class);
+        });
+
+
+        $site->get('/posts', function (Request $request, Response $response) {
     	        $response->getBody()->write('all news');
 	        return $response;
         });
-        $group->get('/posts/{slug}', function (Request $request, Response $response, array $args) {
+        $site->get('/posts/{slug}', function (Request $request, Response $response, array $args) {
             $response->getBody()->write('news item: ' . $args['slug']);
             return $response;
         });
-        $group->get('/monuments', function (Request $request, Response $response) {
+        $site->get('/monuments', function (Request $request, Response $response) {
     	        $response->getBody()->write('all monuments');
 	        return $response;
         });
-        $group->get('/monuments/{slug}', function (Request $request, Response $response, array $args) {
+        $site->get('/monuments/{slug}', function (Request $request, Response $response, array $args) {
             $response->getBody()->write('news item: ' . $args['slug']);
             return $response;
         });
         
-        $group->get('/gallery', function (Request $request, Response $response) {
+        $site->get('/gallery', function (Request $request, Response $response) {
     	        $response->getBody()->write('all terms');
 	        return $response;
         });
-    });
+    })->add(new AuthMiddleware());
 };
